fixes to hamburger sizing added centre aligned name

--- a/golf.css
+++ b/golf.css
@@ -49,7 +49,7 @@ position: sticky;
 top: 0;
 }
 
-.hamburger {
+.mobile-nav {
 display: none;
 cursor: pointer;
 font-size: 24px;
@@ -113,7 +113,13 @@ width: 100%;
     max-width: 263px;
     min-height: 60px;
     border-radius: 100px;
-  }
+}
+
+#smaller-button {
+    width: 144px;
+    height: 40px;
+}
+
 
 .primary-button:active {
     border-style: outset;
@@ -146,7 +152,8 @@ width: 100%;
 .text-content {
     display: flex;
     flex-direction: column;
-    gap: 16px
+    gap: 16px;
+    width: 560px;
 
 }
 
@@ -161,6 +168,11 @@ width: 100%;
 .body-container {
     padding-left: 15%;
     padding-right: 15%;
+}
+
+.img-container {
+    background-color: gray;
+    width: 560px;
 }
 
 @media (max-width: 768px) {
@@ -204,11 +216,38 @@ body {
 .nav-content-right.active {
     display: flex;
 }
-.hamburger {
+.mobile-nav {
     display: block;
+    width: 100%;
 }
 
 .nav-text {
     color: #f8F3E9;
 }
+
+#mobile-centre-text {
+    color: #0E4A28;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.nav {
+    display: flex;
+    /* justify-content: center; */
+}
+
+.content-container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    /* background-color: red; */
+    height: 600px;
+}
+
+.img-container {
+    height: 100%;
+}
+
+
 }
